Remove redundant variables; Remove wrong attributes; Fix comment template issues